--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="Web_Jquery">
+    <wb-module deploy-name="JqueryLabs">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="Web_Jquery"/>
-        <property name="java-output-path" value="/Web_Jquery/build/classes"/>
+        <property name="java-output-path" value="/JqueryLabs/build/classes"/>
+        <property name="context-root" value="JqueryLabs"/>
     </wb-module>
 </project-modules>
